--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,8 +7,7 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="18" />
-
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/> 
@@ -28,6 +27,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+		<uses-library android:name="android.test.runner" />
     </application>
+    
+	<instrumentation android:name="android.test.InstrumentationTestRunner"
+	    android:targetPackage="omnicladsecurity.smsecure"
+	    android:label="omnicladsecurity.smsecure.tests" />
 
 </manifest>
