--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,27 +6,35 @@
 
     <uses-sdk
         android:minSdkVersion="11"
-        android:targetSdkVersion="18" />
+        android:targetSdkVersion="19" />
     
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/> 
 	<uses-permission android:name="android.permission.SEND_SMS"/>
 	<uses-permission android:name="android.permission.READ_SMS"/>
+	<uses-permission android:name="android.permission.RECEIVE_SMS"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name="omnicladsecurity.smsecure.Hub"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <receiver android:name=".SMSReceiver">
+			​​​​​​​​​​​​<intent-filter>
+				​​​​​​​​​​​​​​​​<action android:name="android.provider.Telephony.SMS_RECEIVED"/>
+			​​​​​​​​​​​​</intent-filter> 
+		​​​​​​​​</receiver>
+		
 		<uses-library android:name="android.test.runner" />
     </application>
     
